Fix issue with email link display on small screen

--- a/src/less/contact.less
+++ b/src/less/contact.less
@@ -9,15 +9,26 @@
 
 }
 
+
 .contact-content{
   text-align:center;
   padding:30px 15px 30px 15px;
+
+
 
   p,a{
     font-size:29px;
 
     @media screen and (max-width: 768px) {
       font-size:20px;
+    }
+  }
+
+  .email-us-link{
+    display:block;
+    padding-bottom:15px;
+    @media screen and (max-width: 500px) {
+      font-size:15px;
     }
   }
 }
